src/objects/sma__MAAssignmentRule__c.object
<CustomObject>
    <fields>
        <fullName>sma__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__AssignmentPlan__c</fullName>
        <label>MapAnything Assignment Plan</label>
        <referenceTo>sma__MAAssignmentPlan__c</referenceTo>
        <relationshipLabel>MapAnything Assignment Rules</relationshipLabel>
        <relationshipName>MAAssignmentRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Territory</label>
        <referenceTo>sma__MATerritory__c</referenceTo>
        <relationshipLabel>MapAnything Assignment Rules</relationshipLabel>
        <relationshipName>MAAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MAAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Assignment Rule</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MapAnything Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Assignment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>